bug fix on overflow on footer...still need to clean up

--- a/src/site/Footer.module.css
+++ b/src/site/Footer.module.css
@@ -31,7 +31,8 @@ Taken 2012 by J. Bedient
   /* padding: 5px; */
   width: var(--screen-width);
   flex-flow: row wrap;
-
+  overflow-x: clip;
+  overflow-y: visible;
 }
 
 
@@ -41,6 +42,8 @@ Taken 2012 by J. Bedient
   padding: 1em;
   font-size: .5em;
   max-width: fit-content;
+  overflow-x: clip;
+  overflow-clip-margin: 2em;
 }
 
 .footer > :nth-child(2)  {
@@ -48,6 +51,8 @@ Taken 2012 by J. Bedient
    padding: 1em;
   font-size: 1.5em;
   max-width: fit-content;
+  overflow-x: clip;
+  overflow-clip-margin: 2em;
 }
 
 .footer > :nth-child(3)  {
@@ -55,6 +60,9 @@ Taken 2012 by J. Bedient
  padding: 1em; 
  font-size: .7em;
   max-width: fit-content;
+  overflow-x: clip;
+  overflow-y: visible;
+  overflow-clip-margin: 2em;
 }
 
 .profile {
